<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_dish_setup">DISH SETUP</string>
    <string name="list_type_satellite">Satellite</string>
    <string name="lnb_selected_satellites">Selected Satellites</string>
    <string name="test_satellite">Test Satellite</string>
    <string name="list_type_transponder">Transponder</string>
    <string name="test_transponder">Test Transponder</string>
    <string name="list_type_lnb">LNB</string>
    <string name="list_type_parameter">Parameters</string>
    <string name="dialog_saving">Saving</string>
    <string name="dialog_saving_wait">Please wait...</string>
    <string name="dialog_title_add">ADD</string>
    <string name="dialog_title_edit">EDIT</string>
    <string name="dialog_title_delete">DELETE</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_scan">Scan</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_switch_satellite_transponder">SAT/TRAN</string>
    <string name="dialog_switch_select">SELECT</string>
    <string name="dialog_switch_exit">EXIT</string>
    <string name="dialog_confirm_delete">Do you want to delete this ?</string>
    <string name="transponder_item_transponder">Transponder</string>
    <string name="transponder_item_frequency">Frequency</string>
    <string name="transponder_item_symbol">Symbol Rate</string>
    <string name="transponder_item_polarity">Polarity</string>
    <string name="transponder_item_motor">Motor</string>
    <string name="locator_item_polarization">Polarization</string>
    <string name="locator_item_pid">PID</string>
    <string name="satellite_item_no">No.</string>
    <string name="satellite_item_name">Satellite Name</string>
    <string name="satellite_item_longitude_direction">Longitude Direction</string>
    <string name="satellite_item_longitude_angle">Longitude Angle</string>
    <string name="satellite_item_band">Band</string>
    <string name="parameter_lnb_type">LNB Type</string>
    <string name="parameter_lnb_type_5150">5150</string>
    <string name="parameter_lnb_type_9750">9750/10600</string>
    <string name="parameter_lnb_type_5750">5150/5750</string>
    <string name="parameter_lnb_custom">Customize</string>
    <string name="parameter_lnb_custom_frequency1">Low Band:</string>
    <string name="parameter_lnb_custom_frequency2">High Band:</string>
    <string name="parameter_lnb_custom_band_min">Min Freq:</string>
    <string name="parameter_lnb_custom_band_max">Max Freq:</string>
    <string name="parameter_lnb_custom_band_type">Band Type:</string>
    <string name="parameter_lnb_custom_single_band_type">Single</string>
    <string name="parameter_lnb_custom_double_band_type">Double</string>
    <string name="parameter_unicable">Unicable</string>
    <string name="parameter_unicable_switch">Unicable Switch</string>
    <string name="parameter_unicable_switch_on">on</string>
    <string name="parameter_unicable_switch_off">off</string>
    <string name="parameter_unicable_user_band">User Band</string>
    <string name="parameter_unicable_ub_frequency">UB Frequency</string>
    <string name="parameter_ub_frequency">UB Frequency</string>
    <string name="parameter_position">Position</string>
    <string name="parameter_position_enable">enable</string>
    <string name="parameter_position_disable">disable</string>
    <string name="parameter_lnb_power">LNB Power</string>
    <string name="parameter_22_khz">22KHz</string>
    <string name="parameter_tone_burst">ToneBurst</string>
    <string name="parameter_diseqc1_0">DisEqc1.0</string>
    <string name="parameter_diseqc1_1">DisEqc1.1</string>
    <string name="parameter_diseqc2_x">DisEqc2.x</string>
    <string name="parameter_motor">Motor</string>
    <string name="parameter_diseqc1_2">DisEqc1.2</string>
    <string name="parameter_diseqc1_2_dish_limits_status">Dish Limits Status</string>
    <string name="parameter_diseqc1_2_dish_limits_east">Set Dish Limits East</string>
    <string name="parameter_diseqc1_2_dish_limits_west">Set Dish Limits West</string>
    <string name="parameter_diseqc1_2_press_to_limit_east">Press To Limit East</string>
    <string name="parameter_diseqc1_2_press_to_limit_west">Press To Limit West</string>
    <string name="parameter_diseqc1_2_move_direction_east">east</string>
    <string name="parameter_diseqc1_2_move_direction_center">center</string>
    <string name="parameter_diseqc1_2_move_direction_west">west</string>
    <string name="parameter_diseqc1_2_move_direction">Move Direction</string>
    <string name="parameter_diseqc1_2_move_step">Move Step</string>
    <string name="parameter_diseqc1_2_move">Move</string>
    <string name="parameter_diseqc1_2_stop_move">Stop Move</string>
    <string name="parameter_diseqc1_2_press_to_move">Press To Move</string>
    <string name="parameter_diseqc1_2_press_to_stop_move">Press To Stop Move</string>
    <string name="parameter_diseqc1_2_current_position">Current Position</string>
    <string name="parameter_diseqc1_2_save_to_position">Save To Position</string>
    <string name="parameter_diseqc1_2_press_to_save">Press To Save</string>
    <string name="parameter_diseqc1_2_move_to_position">Move To Position</string>

    <string name="dialog_diseqc_1_2_strength">Strength</string>
    <string name="dialog_diseqc_1_2_quality">Quality</string>
    <string name="dialog_add_satellite">Add Satellite</string>
    <string name="dialog_add_transponder">Add Transponder</string>
    <string name="dialog_add_locator">Add a new Locator</string>
    <string name="dialog_edit_satellite">Edit Satellite</string>
    <string name="dialog_edit_transponder">Edit Transponder</string>
    <string name="dialog_edit_locator">Edit locator</string>
    <string name="dialog_remove_satellite">Remove Satellite</string>
    <string name="dialog_remove_transponder">Remove Transponder</string>
    <string name="dialog_add_satellite_name">Name</string>
    <string name="dialog_add_satellite_direction">Direction</string>
    <string name="dialog_add_satellite_longitude">Longitude</string>
    <string name="dialog_parameter_not_complete">Parameters not completed!</string>
    <string name="dialog_parameter_select_transponder">please select a transponder before search it!</string>
    <string name="dialog_parameter_select_satellite">please select a satellite before search it!</string>
    <string name="dialog_parameter_set_blind">please set blind frequency before search it!</string>
    <string name="dialog_parameter_set_lnb">please set LNB before search it!</string>

    <string name="search_activity_not_found">Channel search activity is unavailable!</string>
    <string name="strSettings">Option Settings</string>
    <string name="strSettingsCountry">Country:</string>
    <string name="strSettingsAudioLang">Audio Language:</string>
    <string name="strSettingsMainAudioLang">Main Audio Language:</string>
    <string name="strSettingsAssistAudioLang">Second Audio Language:</string>
    <string name="strSettingsSubtitleLang">Text Language:</string>
    <string name="strSettingsMainSubtitleLang">Main Text Language:</string>
    <string name="strSettingsAssistSubtitleLang">Second Text Language:</string>
    <string name="strSettingsTeletextCharset">Teletext charset:</string>
    <string name="strSettingsHearingImpaired">Hearing Impaired:</string>
    <string name="strSettingsHearingImpairedOff">OFF</string>
    <string name="strSettingsHearingImpairedOn">ON</string>
    <string name="strSettingsStorageSelect">PVR Storage Select:</string>
    <string name="strSettingsRefresh">Refresh</string>
    <string name="strSettingsPvrDefault">App Data</string>
    <string name="strSettingsPvrFullFrequency">Record Frequency</string>
    <string name="strSettingsAdAudio">Associate Audio:</string>
    <string name="strSettingsAdAudio_enable">Enable</string>
    <string name="strSettingsFormatDialog">Storage need to be to formatted to FAT and data will be deleted !</string>
    <string name="strSettingsFormatDialog_ok">Ok</string>
    <string name="strSettingsFormatDialog_cancel">Cancel</string>
    <string name="strSettingsFormatDialog_formatting">Storage is formatting...</string>
    <string name="strSettingsFormatDialog_formatting_done">Formatting done !</string>
    <string name="strSettingsUpdateNetwork">Update network:</string>
    <string name="strSettingsUpdateNetworkUpdate">Update</string>
    <string name="strSettingsAutoOrdering">Automatic Ordering:</string>
    <string name="strSettingsAutoOrdering_enable">Enable</string>
    <string name="strSettingsAutoSearching">Automatic Searching:</string>
    <string name="strSettingsAutoSearchingSetting">Setting</string>
    <string name="strSettingsAutoSearchingHourFormat">(24-hour format)</string>
    <string name="strSatelliteExportImport">Satellites Export/Import</string>
    <string name="strChannelsExportImport">Channels Export/Import</string>
    <string name="strExport">Export</string>
    <string name="strImport">Import</string>
    <string name="strFactorySettings">Factory Settings</string>
    <string name="strRestoreToDefault">DVBS Reset</string>

    <!-- password dialog-->
    <string name="please_enter_pin">Please enter your PIN</string>
    <string name="old_password">Please input old PIN</string>
    <string name="new_password">Please input new PIN</string>
    <string name="new_password_again">Please input new PIN again</string>
    <string name="invalid_password">Invalid PIN</string>
    <string name="change_password_not_match">The two passwords must match</string>
    <string name="condensed_font" translatable="false">sans-serif-condensed</string>
    <string name="option_item_text_font" translatable="false">@string/condensed_font</string>
    <string name="option_item_secondary_text_font" translatable="false">@string/condensed_font</string>
    <string name="number_picker_asterisk" translatable="false">*</string>
</resources>
