<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical|center_horizontal"
    android:background="@color/common_item_background"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/set_title"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/px_40.0"
        android:layout_marginLeft="@dimen/px_200.0"
        android:layout_marginRight="@dimen/px_190.0"
        android:paddingTop="@dimen/px_3.0"
        android:paddingBottom="@dimen/px_6.0">

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/title_dish_setup"
            android:textColor="#B3EEEEEE"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/function_key2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:gravity="center_vertical|center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical|center_horizontal">

                <include
                    android:id="@+id/icon_goto_all"
                    layout="@layout/satellite_display" />

                <include
                    android:id="@+id/icon_ok_all"
                    layout="@layout/ok_display" />

                <include
                    android:id="@+id/icon_exit_all"
                    layout="@layout/exit_display" />

                <include
                    android:id="@+id/icon_wheel_all"
                    layout="@layout/wheel_display" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/px_2.0"
        android:layout_marginLeft="@dimen/px_200.0"
        android:layout_marginRight="@dimen/px_190.0"
        android:background="@color/line_color" />

    <LinearLayout
        android:id="@+id/satellite_related"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginLeft="@dimen/px_200.0"
        android:layout_marginRight="@dimen/px_190.0"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:weightSum="10">

        <LinearLayout
            android:id="@+id/satellite_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/list_type_satellite"
                android:textColor="@color/common_text_color"
                android:textSize="14sp" />

            <com.droidlogic.fragment.ItemListView
                android:id="@+id/lv_item"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_540.0"
                android:layout_marginRight="10dp"
                android:background="@color/common_item_background"
                android:clickable="true"
                android:divider="?android:attr/listDividerAlertDialog"
                android:focusable="true"
                android:footerDividersEnabled="false"
                android:headerDividersEnabled="false" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/px_24.0"
            android:layout_marginRight="@dimen/px_12.0"
            android:layout_marginBottom="@dimen/px_12.0"
            android:src="@drawable/branch" />

        <LinearLayout
            android:id="@+id/satellite_item2"
            android:layout_width="@dimen/px_280.0"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="2.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_item_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/list_type_satellite"
                android:textColor="@color/common_text_color"
                android:textSize="14sp" />

            <com.droidlogic.fragment.ItemListView
                android:id="@+id/lv_item2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_540.0"
                android:layout_marginRight="@dimen/px_12.0"
                android:background="@color/common_item_background"
                android:clickable="true"
                android:divider="?android:attr/listDividerAlertDialog"
                android:focusable="true"
                android:footerDividersEnabled="false"
                android:headerDividersEnabled="false" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/px_24.0"
            android:layout_marginBottom="@dimen/px_12.0"
            android:src="@drawable/branch" />

        <LinearLayout
            android:id="@+id/satellite_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="5.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lv_option_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/list_type_parameter"
                android:textColor="@color/common_text_color"
                android:textSize="14sp" />

            <com.droidlogic.fragment.ItemListView
                android:id="@+id/lv_option"
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_540.0"
                android:layout_marginLeft="5dp"
                android:background="@color/common_item_background"
                android:clickable="true"
                android:divider="?android:attr/listDividerAlertDialog"
                android:focusable="true"
                android:footerDividersEnabled="false"
                android:headerDividersEnabled="false" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/px_24.0"
            android:layout_marginBottom="@dimen/px_12.0"
            android:src="@drawable/branch" />

    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/px_2.0"
        android:layout_marginLeft="@dimen/px_200.0"
        android:layout_marginTop="@dimen/px_6.0"
        android:layout_marginRight="@dimen/px_190.0"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_80.0"
        android:layout_marginLeft="@dimen/px_200.0"
        android:layout_marginTop="@dimen/px_12.0"
        android:layout_marginRight="@dimen/px_190.0"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/function_key1"
            android:layout_width="@dimen/px_300.0"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <include
                        android:id="@+id/circle_red_icon"
                        layout="@layout/add_display"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <include
                        android:id="@+id/circle_blue_icon"
                        layout="@layout/scan_display" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <include
                        android:id="@+id/circle_yellow_icon"
                        layout="@layout/delete_display"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <include
                        android:id="@+id/circle_green_icon"
                        layout="@layout/edit_display" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/strength_quality_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/strength_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/strength_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/px_6.0"
                    android:text="@string/dialog_diseqc_1_2_strength"
                    android:textColor="#B3EEEEEE"
                    android:textSize="14sp" />

                <ProgressBar
                    android:id="@+id/proBar_strength"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/strength_percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="0%"
                    android:textColor="#B3EEEEEE"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/quality_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/quality_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="@dimen/px_6.0"
                    android:text="@string/dialog_diseqc_1_2_quality"
                    android:textColor="#B3EEEEEE"
                    android:textSize="14sp" />

                <ProgressBar
                    android:id="@+id/proBar_quality"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/quality_percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:text="0%"
                    android:textColor="#B3EEEEEE"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
